--- a/src/style/People.css
+++ b/src/style/People.css
@@ -41,26 +41,25 @@
 
 .intro-photo {
   position: absolute;
-}
-
-.intro-photo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .intro-photo-1 {
-  top: 10%;
-  left: 5%;
+  top: 0%;
+  left: -10%;
   width: 250px;
   height: 300px;
   background-color: #8FBC8F;
 }
 
 .intro-photo-2 {
-  top: 5%;
-  left: 30%;
+  top: -5%;
+  left: 20%;
   width: 150px;
   height: 200px;
   background-color: #2F4F2F;
@@ -68,15 +67,15 @@
 
 .intro-photo-3 {
   top: 15%;
-  right: 5%;
+  right: -5%;
   width: 280px;
   height: 200px;
   background-color: #B0C4DE;
 }
 
 .intro-photo-4 {
-  bottom: 10%;
-  left: 8%;
+  bottom: 0%;
+  left: 13%;
   width: 220px;
   height: 280px;
   background-color: #D2B48C;
@@ -84,14 +83,14 @@
 
 .intro-photo-5 {
   bottom: 5%;
-  right: 15%;
+  right: 0%;
   width: 350px;
   height: 180px;
   background-color: #87CEEB;
 }
 
 .intro-photo-6 {
-  top: 35%;
+  top: -5%;
   right: 25%;
   width: 200px;
   height: 150px;
