Add intro photos and remove text shadows from homepage
- Add 6 intro photos (intro_1 to intro_6) to People page introduction section
- Update gallery section with real names and photos for 7 members
- Remove text shadows from homepage logo hover text
- Update background image to main_background.jpg
- All photos properly sized and positioned with CSS

--- a/src/style/People.css
+++ b/src/style/People.css
@@ -47,6 +47,14 @@
   color: #666;
   font-size: 16px;
   font-weight: 500;
+  overflow: hidden;
+}
+
+.intro-photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0;
 }
 
 .intro-photo-1 {
