--- a/src/App.module.css
+++ b/src/App.module.css
@@ -18,7 +18,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(icons/temp-group-pic.jpg);
+  background-image: url(icons/main_background.jpg);
   background-size: cover;
   background-position: center;
   filter: grayscale(0);
@@ -133,7 +133,7 @@
     transition: all 0.3s ease;
     text-align: center;
     color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    text-shadow: none;
     z-index: 10;
     pointer-events: none;
     width: 100%;
