--- a/src/App.module.css
+++ b/src/App.module.css
@@ -71,7 +71,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    cursor: pointer;
 }
 
 .logo .link {
@@ -107,6 +106,15 @@
 }
 .logo:nth-child(4) .link {
     background-image: url(icons/logo4_white.png);
+}
+
+/* Clickable logos only */
+.logo:nth-child(1) {
+    cursor: pointer;
+}
+
+.logo:nth-child(4) {
+    cursor: pointer;
 }
 
 .logo:nth-child(1) .link:hover {
