Update typography to KoPub Dotum 300 and clean up fonts
- Change all fonts to use KoPub Dotum 300 (thinner weight) exclusively
- Update Google Fonts import to only load weight 300
- Remove all unused font imports and references:
  * Remove commented Noto Sans KR imports from reset.css
  * Remove commented fontello font link from index.html
- Update all font-weight declarations across the project:
  * People page: Studio title and description now use weight 300 and black color
  * Navigation: All nav items use weight 300
  * Works page: All text elements use weight 300
  * App module: All text elements use weight 300
  * Reset styles: Global elements use weight 300
- Left-align studio description text on People page
- Optimize font loading for better performance
- Ensure consistent thin typography throughout the site

--- a/src/reset.css
+++ b/src/reset.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-/* Noto Sans KR */
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap'); */
-/* body { font-family: 'Noto Sans KR', sans-serif; } */
 
 /* Reset */
 html,body,h1,h2,h3,h4,h5,h6,div,p,blockquote,pre,code,address,ul,ol,li,nav,section,article,header,footer,main,aside,dl,dt,dd,table,thead,tbody,tfoot,label,caption,th,td,form,fieldset,legend,hr,input,button,textarea,object,figure,figcaption {margin:0;padding:0;}
@@ -16,9 +13,9 @@ iframe {overflow:hidden;margin:0;border:0;padding:0;vertical-align:top}
 textarea {-webkit-backface-visibility:hidden;backface-visibility:hidden;background-color:transparent;border:0;word-break:keep-all;word-wrap:break-word}
 p, li{word-break: keep-all;}
 /* text */
-body, button, input, select, table, textarea {font-size:12px;line-height:1.4;color:#202020;font-family:-apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif}
-h1, h2, h3, h4, h5, h6 {font-size:inherit;font-weight: normal;}
-address,cite,code,em,i{font-style:normal;font-weight:normal;}
+body, button, input, select, table, textarea {font-size:12px;line-height:1.4;color:#202020;font-family:'KoPub Dotum', sans-serif}
+h1, h2, h3, h4, h5, h6 {font-size:inherit;font-weight: 300;}
+address,cite,code,em,i{font-style:normal;font-weight:300;}
 a {color:inherit;text-decoration:none}
 a:hover {text-decoration:underline}
 
